--- a/.config/uwsgi.ini
+++ b/.config/uwsgi.ini
@@ -1,12 +1,12 @@
 [uwsgi]
-chdir = /srv/django/
-virtualenv = /srv/django/venv/
+chdir = /srv/bookmark/
+virtualenv = /srv/bookmark/venv/
 module = config.wsgi:application
-home = /srv/django/venv/
+home = /srv/bookmark/venv/
 
 uid = ubuntu
 gid = ubuntu
-socket = /srv/django/.config/uwsgi.sock
+socket = /srv/bookmark/.config/uwsgi.sock
 chmod-socket = 666
 chown-socket = ubuntu:ubuntu
 max-requests = 5000
